Update jvm memory